kcms/tabbox/layoutpreview.h
@@ -139,6 +139,24 @@ inline QObject* SwitcherItem::item() const
     return m_item;
 }
 
-}
+class DesktopBackground : public WindowThumbnailItem
+{
+    Q_OBJECT
+    Q_PROPERTY(QVariant activity MEMBER m_activity)
+    Q_PROPERTY(QVariant desktop MEMBER m_desktop)
+    Q_PROPERTY(QString outputName MEMBER m_outputName)
 
-#endif // KWIN_TABBOX_LAYOUTPREVIEW_H
+public:
+    DesktopBackground(QQuickItem* parent = nullptr);
+
+private Q_SLOTS:
+    void stretchToScreen();
+
+private:
+    // Just for mock-up purposes.
+    QVariant m_activity;
+    QVariant m_desktop;
+    QString m_outputName;
+};
+
+}
